@@ -1,3 +1,11 @@
+2014-10-01 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Continua lo sviluppo dell'add delle attivitità.
+
+2014-09-30 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunto il salvataggio su oggetto dell'activity.
+
 2014-09-24 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Aggiunta la definizione vuota delle funzioni per la gestione del tab activity.
